--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -48,9 +48,15 @@ ___
 
 #### BrainBox
 
-**Abstract: TBA**
+**Abstract:**
+Progress in biomedical research requires studying datasets much larger than previously thought, but also finding ways for large numbers of researchers to collaborate creatively. In neuroimaging, a wealth of open data is available, including data on autism, schizophrenia, and many more. However, the data is not easy to find, is curated and analysed locally, in redundant, often wasteful and opaque ways.
+Our Web application BrainBox explores a radical open science solution to the problem of distributed collaboration. A mix of Wikipedia and Google Docs, BrainBox enables researchers to add a layer of real-time interactive annotation and segmentation to the great amount of neuroimaging data shared online. It allows distributed research teams to collaborate in the analysis of open data and avoid redundant work – promoting community efforts instead of competition.
+In my presentation, I will show you BrainBox in (inter)action, how to create a project, invite collaborators, annotate data, and use the API to integrate BrainBox into your automatic, reproducible analysis pipelines.
+Currently, more than 13,000 datasets are indexed and available for collaboration. During the Brainhack, I will be more than happy to help you set up your own projects, or invite you to join my current project. By working together, sharing our work and our analyses, we should improve transparency, increase statistical power and reproducibility.
 
-**Bio: TBA**
+
+**Bio:**
+I use neuroimaging to understand the evolution and development of the brain. I am strongly involved in open, reproducible, science and interdisciplinary research: I develop open Web applications to facilitate access to open data, foster collaboration and citizen science. I have a background in fine arts and in many of my projects I combine art and science ([http://tiny.cc/ArtOfMR_2X](http://tiny.cc/ArtOfMR_2X)) as a way to engage with the general public ([http://tiny.cc/FireAndWireX](http://tiny.cc/FireAndWireX)).
 
 ___
 
