--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -13,9 +13,9 @@ color: white
 ### Registration form is available [here](https://docs.google.com/forms/d/e/1FAIpQLSddlhiyNjpdJ6s_qCEPAhR0_K2jW06Q4lktpAHW_SXzROIAXw/viewform)
 
 Registration will take place in three rounds and there will be small registration fee (to cover the catering during the event) for the project participants:
-* **EARLY** -> *21.01* - *03.02* -> 100 PLN
-* **REGULAR** -> *04.02* - *17.02* -> 120 PLN
-* **LATE** -> *18.02* - *24.02* -> 135 PLN
+* **EARLY** -> *21.01* - *03.02* -> 100 PLN / 25 EUR
+* **REGULAR** -> *04.02* - *17.02* -> 120 PLN / 30 EUR
+* **LATE** -> *18.02* - *24.02* -> 135 PLN / 35 EUR 
 
 **PLEASE NOTE:** the first round is paid after qualifying, second and third immediately
 
