--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -90,6 +90,8 @@ We will use human and mice data provided by the supervisors. The main challenge 
 
 ## Project 2: Generating fake MRI to enhance Alzheimer's disease prediction
 
+# All places occupied 
+
 #### Author: Sebastian  Gabriel Popescu, MPhil<sup>1</sup> <a href="mailto:s.popescu16@imperial.ac.uk"><i class="fa fa-envelope"></i></a>
 
 1. Imperial College London, Great Britain
