--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -7,7 +7,7 @@ color: white
 
 ---
 
-<a href="{{ url }}index.html#project1">Project 1: Misfolded protein spreading on brain connectome</a>
+<a href="{{ url }}index.html#project1"> <s>Project 1: Misfolded protein spreading on brain connectome</s> </a>
 
 <a href="{{ url }}index.html#project2">Project 2: Generating fake MRI to enhance Alzheimer’s disease prediction</a>
 
@@ -51,6 +51,8 @@ The proposals can include various forms of a group activity, e.g., data analysis
 <a id="project1"></a>
 
 ## Project 1: Misfolded protein spreading on brain connectome
+
+## UNAVAILABLE
 
 #### Authors: Alessandro Crimi, PhD<sup>1</sup> <a href="mailto:alessandro.crimi@usz.ch"><i class="fa fa-envelope"></i></a>  / Eleanna Kara <sup>2</sup>
 
@@ -213,6 +215,8 @@ And, in the absence of any ethics commission for artificial neural networks, we 
 <a id="project5"></a>
 
 ## Project 5: Tackling the ABCD Neurocognitive Prediction Challenge
+
+### All places booked
 
 #### Authors: Hanna Nowicka <sup>1</sup> <a href="mailto:hn.nowicka@gmail.com"><i class="fa fa-envelope"></i></a>
 
