--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -300,6 +300,8 @@ multidimensionality and timescales”)
 
 ## Project 7: Cross-Recurrence Quantification Analysis (cRQA) as a new measure of functional connectivity
 
+### All places booked
+
 #### Authors: Krzysztof Bielski <sup>1</sup> <a href="mailto:k.bielski@nencki.gov.pl"><i class="fa fa-envelope"></i></a> / Joanna Rączaszek-Leonardi <sup>2</sup>
 
 1. Nencki Institute of Experimental Biology PAS, Warsaw, Poland
