--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -19,9 +19,15 @@ Registration will take place in three rounds and there will be small registratio
 
 **PLEASE NOTE:** the first round is paid after qualifying, second and third immediately
 
-Payment details will be available soon.
-
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+
+### Payment details
+ **Bank account**:
+   * Bank Millennium <u>44 1160 2202 0000 0000 6084 9470</u>
+   * **IBAN**: PL 44 1160 2202 0000 0000 6084 9470
+   * **SWIFT/BIC**: BIGBPLPW
+   * **Transfer title**: Brainhack Warsaw 2019 <first name> <last name>
+   * If you want to get an <u>invoice</u>, please send us the necessary information to: [invoice.brainhack@gmail.com](mailto:invoice.brainhack@gmail.com)
 
 For your convenience we prepared a list of nice and friendly hotels where you get a special Brainhack Warsaw discount:
 * **Moon Hostel** - 10% discount but remember to rely on participation in Brainhack
