--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -22,9 +22,8 @@ Registration will take place in three rounds and there will be small registratio
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 ### Payment details
- **Bank account**:
-   * Bank Millennium <u>44 1160 2202 0000 0000 6084 9470</u>
-   * **IBAN**: PL 44 1160 2202 0000 0000 6084 9470
+   * **Bank account:** Bank Millennium <u>44 1160 2202 0000 0000 6084 9470</u>
+   * **IBAN**: <u>PL 44 1160 2202 0000 0000 6084 9470 </u>
    * **SWIFT/BIC**: BIGBPLPW
    * **Transfer title**: Brainhack Warsaw 2019 <first name> <last name>
    * If you want to get an <u>invoice</u>, please send us the necessary information to: [invoice.brainhack@gmail.com](mailto:invoice.brainhack@gmail.com)
