--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -349,7 +349,11 @@ This will require certain tasks to be performed: gathering of learning data, cre
 1. [https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf](https://hal.archives-ouvertes.fr/file/index/docid/681328/filename/Barachant_tbme_final.pdf),
 2. [https://ieeexplore.ieee.org/abstract/document/1570513](https://ieeexplore.ieee.org/abstract/document/1570513)
 
-**A List of requirements for taking part in the project:**
+**List of useful skills in the project:**
+* Graphic design,
+* Muscle anatomy,
+* Motor neuron physiology,
+* Modelnig,
 * Comfortable with python,
 * English good enough to read code documentation and some research articles,
 * Signal processing would be a plus
@@ -391,10 +395,10 @@ Further direction for the analysis will depend on participants and the availabil
 [https://arxiv.org/pdf/1807.05571.pdf](https://arxiv.org/pdf/1807.05571.pdf)
 6. How to make a graph of  twitter followers: [https://github.com/alumbreras/twitter-followers-graph](https://github.com/alumbreras/twitter-followers-graph)
 
-**A List of requirements for taking part in the project:**
+**List of useful skills in the project:**
 * BSc program, or higher
 * English: good, not necessarily proficient
-* Good Python/R programming skills and basic familiarity with machine learning
+* Good Python/R programming skills and basic familiarity with machine learning is a plus, but you could participate even when you cant program
 
 
 **Maximum number of participants:** 12
