--- a/_posts/2017-07-09-sponsors.md
+++ b/_posts/2017-07-09-sponsors.md
@@ -11,3 +11,5 @@ color: black
 
 
 <a href="https://www.fuw.edu.pl/faculty-of-physics-home.html">![test image size](/img/sponsors/logo_FUW.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}</a>
+
+<a href="https://www.fuw.edu.pl/faculty-of-physics-home.html">![test image size](/img/sponsors/logo_WPsych.jpg?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}</a>
