--- a/_posts/2017-07-09-sponsors.md
+++ b/_posts/2017-07-09-sponsors.md
@@ -14,4 +14,4 @@ color: black
 
 
 
-<a href="https://www.fuw.edu.pl/faculty-of-physics-home.html">![test image size](/img/sponsors/logo_WPsych.jpg?style=centerme){:class="img-responsive" height="60%" width="60%" align="center"}</a>
+<a href="http://psych.uw.edu.pl/">![test image size](/img/sponsors/logo_WPsych.jpg?style=centerme){:class="img-responsive" height="60%" width="60%" align="center"}</a>
