Update sponsors bckgrnd

--- a/_posts/2017-07-09-sponsors.md
+++ b/_posts/2017-07-09-sponsors.md
@@ -1,6 +1,6 @@
 ---
 title: "Partners & Sponsors"
-bg: light_green
+bg: main_white
 color: black
 
 
@@ -12,6 +12,8 @@ color: black
 
 <a href="https://www.fuw.edu.pl/faculty-of-physics-home.html">![test image size](/img/sponsors/logo_FUW.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}</a>
 
+
+<p>
 
 
 <a href="http://psych.uw.edu.pl/">![test image size](/img/sponsors/logo_WPsych.jpg?style=centerme){:class="img-responsive" height="30%" width="30%" align="center"}</a>
