--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -154,8 +154,13 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 5. [https://en.wikipedia.org/wiki/Epilepsy](https://en.wikipedia.org/wiki/Epilepsy) and [https://en.wikipedia.org/wiki/Electroencephalography](https://en.wikipedia.org/wiki/Electroencephalography)
 6. Scheffer, Marten, et al. "Early-warning signals for critical transitions." Nature 461.7260 (2009): 53.
 
-**A list of requirements for taking part in the project:**
-* Programming in Python
+**List of useful skills in the project:**
+* Neurobiological knowledge
+* Signal analysis
+* Data visualization
+* EEG signal analysis and modelling
+* Network analysis
+* Programming in Python, Igraph (python library)
 * English (reading, writing)
 * BSc program, or higher
 * Bring computer
@@ -194,7 +199,11 @@ And, in the absence of any ethics commission for artificial neural networks, we 
 3. Radoslaw Martin Cichy et al., “Comparison of deep neural networks to spatio-temporal cortical dynamics of human visual object recognition reveals hierarchical correspondence”, [https://www.nature.com/articles/srep27755](https://www.nature.com/articles/srep27755)
 4. Daniel L. K. Yamins et al., “Performance-optimized hierarchical models predict neural responses in higher visual cortex”, [https://www.pnas.org/content/111/23/8619](https://www.pnas.org/content/111/23/8619)
 
-**A list of requirements for taking part in the project:**
+**List of useful skills in the project:**
+* Expert knowledge related to the visual cortex
+* Psychology of vision
+* Academic and technical writing
+* Data visualization (academic, technical or artistic)
 * I assume at least basic experience with programming and Python. If not yet, I gathered some materials there:
 [https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html](https://p.migdal.pl/2016/03/15/data-science-intro-for-math-phys-background.html)
 * To get overview of deep learning for image classification, I suggest reading my blog post:
