--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -132,6 +132,8 @@ Participants will be encouraged to develop their own classification pipeline, fo
 
 ## Project 3: Network analysis of the electrical activity of the brain during epileptic seizures
 
+### All places booked
+
 #### Authors: Jarosław Klamut, MSc <sup>1</sup> <a href="mailto:jaroslaw.klamut@fuw.edu.pl"><i class="fa fa-envelope"></i></a> / Mateusz Wiliński, MSc <sup>2</sup>
 
 1. Faculty of Physics, University of Warsaw, Poland
@@ -178,6 +180,8 @@ Epilepsy is a highly prevalent disorder. 1% of all emergency department visits i
 <a id="project4"></a>
 
 ## Project 4: Deep Frankenstein: dissecting and sewing artificial neural networks
+
+### All places booked
 
 #### Authors: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>  / Katarzyna Kańska <sup>2</sup>
 
