--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -62,15 +62,15 @@ ___
 
 <a name="geek"></a>
 
-{% include speaker-card.html avatarurl="geek.jpg" profilename="Kamila Pendyk"   affiliation="Geek Girls Carrots <br> Warsaw, Poland" %}
+{% include speaker-card.html avatarurl="geek.jpg" profilename="Agata Piekut"   affiliation="Communication Manager, Geek Girls Carrots <br> Warsaw, Poland" %}
 
-#### Financial negotiations
+#### International B2B communication (on a budget)
 
 **Abstract:**
-How do you start financial negotiations when you talk to a potential investor of your idea based on Hacking Carrots case study. Examples of conversations, tips that can be implemented in both work and startup environments. Each participant will gain detailed knowledge that they will be able to use in difficult conversations about money.
+Tips and tricks of building an international presence and business relations with various online tools. You’ll learn how to optimize your business profile, various networking strategies, and best practice of expert positioning. We’ll cover best practice in online communication on LinkedIn and Twitter, as well as how it supports offline interactions, e.g. during trade shows.
 
 **Bio:**
-Since 2012, she has been associated with the IT industry as a Project Manager. In July 2017, she defended the MBA title in the field of IT for the Polish-Japanese Academy of Information Technology in cooperation with Microsoft. For several years, she has been involved in organizations that support women in technologies. In the role of Marketing Director she introduced to the Polish market one of the largest brands among organizations supporting women in STEM. Currently permanently associated with GGC, she is responsible for the Hacking Carrots project. Privately, she is involved in charitable organizations, the dog-mum of two mongrels.
+TBA
 
 <!--
 <a name="geek"></a>
