--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -70,7 +70,7 @@ ___
 Tips and tricks of building an international presence and business relations with various online tools. You’ll learn how to optimize your business profile, various networking strategies, and best practice of expert positioning. We’ll cover best practice in online communication on LinkedIn and Twitter, as well as how it supports offline interactions, e.g. during trade shows.
 
 **Bio:**
-TBA
+Agata is responsible for the communication strategy of Geek Girls Carrots. She's a member of IEEE Global A/IS Ethics Initiative, HIMSS Interoperability & Health Information Exchange (HIE) Task Force and Digital Health Society coordinated by European Connected Health Alliance. She's been working in international communication of tech brands for the past eight years. She graduated from Applied Linguistics at the Univerity of Warsaw and School of European and Spanish Law at Universidad Castilla-La Mancha/UW.
 
 <!--
 <a name="geek"></a>
