--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -49,6 +49,17 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{  color2  }}" width="24" height="24">
+<p lang="en-US">9:30</p>
+</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p></td>
+</tr>
+
+<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">10:00</p>
 </td>
@@ -62,8 +73,32 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{  color2  }}" width="24" height="24">
+<p lang="en-US">10:30</p>
+</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p></td>
+</tr>
+
+<tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">11:00</p>
+</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking2  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  hacking2  }}" width="119">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+</tr>
+
+<tr>
+<td bgcolor="{{  color2  }}" width="24" height="5">
+<p lang="en-US">11:30</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  hacking2  }}" width="127">
@@ -88,6 +123,19 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{ color1 }}" width="24" height="5">
+<p lang="en-US">12:30</p>
+</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
+</td>
+<td bgcolor="{{ hacking1 }}" width="119">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+</tr>
+
+<tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">13:00</p>
 </td>
@@ -101,8 +149,34 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{  color2  }}" width="24" height="5">
+<p lang="en-US">13:30</p>
+</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking1 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  dinner }}" width="119">
+<p lang="en-US"><span lang="en-US">Lunch</span></p>
+</td>
+</tr>
+
+<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">14:00</p>
+</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{ presentation1 }}" width="119">
+<p lang="en-US"><span lang="en-US">Preparing final presentations</span></p>
+</td>
+</tr>
+
+<tr>
+<td bgcolor="{{ color1 }}" width="24" height="5">
+<p lang="en-US">14:30</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
 <td bgcolor="{{ hacking2 }}" width="127">
@@ -132,6 +206,24 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{  color2  }}" width="24" height="5">
+<p lang="en-US">15:30</p>
+</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  lecture }}" width="127">
+<p lang="en-US"><span lang="en-US">Talks from:</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em>
+</span></p>
+</span></p>
+</span></p></td>
+<td bgcolor="{{  presentation2  }}" width="119">
+<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
+</td>
+</tr>
+
+<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">16:00</p>
 </td>
@@ -145,8 +237,36 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{ color1 }}" width="24" height="5">
+<p lang="en-US">16:30</p>
+</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
+</td>
+<td bgcolor="{{  presentation1  }}" width="119">
+<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
+</td>
+</tr>
+
+<tr>
 <td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">17:00</p>
+</td>
+<td bgcolor="{{  dinner }}" width="118">
+<p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
+</td>
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking </span></p>
+</td>
+<td bgcolor="{{  dinner  }}" width="119">
+<p lang="en-US"><span lang="en-US">Googbye drinks</span></p>
+</td>
+</tr>
+
+<tr>
+<td bgcolor="{{  color2  }}" width="24" height="38">
+<p lang="en-US">17:30</p>
 </td>
 <td bgcolor="{{  dinner }}" width="118">
 <p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
@@ -175,6 +295,21 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{ color1 }}" width="24" height="13">
+<p lang="en-US">18:30</p>
+</td>
+<td bgcolor="{{  presentation1  }}" width="118">
+<p lang="en-US"><span lang="en-US">5-min blitz project opening presentations</span></p>
+</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  dinner }}" width="119">
+<p lang="en-US"><span lang="en-US">Goodbye drinks</span></p>
+</td>
+</tr>
+
+<tr>
 <td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">19:00</p>
 </td>
@@ -184,8 +319,22 @@ color: darkblue
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;
+</td>
+</tr>
 
+<tr>
+<td bgcolor="{{  color2  }}" width="24" height="38">
+<p lang="en-US">19:30</p>
+</td>
+<td bgcolor="{{  presentation2  }}" width="118">
+<p lang="en-US"><span lang="en-US">Prestentations by partners&sponsors </span></p>
+</td>
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -199,8 +348,23 @@ color: darkblue
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;
+</td>
+</tr>
 
+<tr>
+<td bgcolor="{{ color1 }}" width="24" height="13">
+<p lang="en-US">20:30</p>
+</td>
+<td bgcolor="{{  lecture  }}" width="118">
+<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
+</span></p></td>
+<td bgcolor="{{  dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Dinner</span></p>
+</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -215,10 +379,36 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
-<tr>
 
+<tr>
+<td bgcolor="{{  color2  }}" width="24" height="5">
+<p lang="en-US">21:30</p>
+</td>
+<td bgcolor="{{  hacking2  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
+</td>
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+</tr>
+
+<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
+</td>
+<td bgcolor="{{ social }}" width="118">
+<p lang="en-US"><span lang="en-US">Late-night social</span></p>
+</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
+</tr>
+
+<tr>
+<td bgcolor="{{ color1 }}" width="24" height="5">
+<p lang="en-US">22:30</p>
 </td>
 <td bgcolor="{{ social }}" width="118">
 <p lang="en-US"><span lang="en-US">Late-night social</span></p>
