--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -310,87 +310,85 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="38">
+<td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">19:00</p>
 </td>
-<td bgcolor="{{  presentation2  }}" width="118">
-<p lang="en-US"><span lang="en-US">Prestentations by partners&sponsors </span></p>
+<td bgcolor="{{  lecture  }}" width="118">
+<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
+</span></p></td>
+<td bgcolor="{{  dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
-<td bgcolor="{{  hacking1  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;
+<td bgcolor="{{  color1  }}" width="119">&nbsp;
 </td>
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="38">
+<td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">19:30</p>
 </td>
-<td bgcolor="{{  presentation2  }}" width="118">
-<p lang="en-US"><span lang="en-US">Prestentations by partners&sponsors </span></p>
+<td bgcolor="{{  lecture  }}" width="118">
+<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
+</span></p></td>
+<td bgcolor="{{  dinner }}" width="127">
+<p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
-<td bgcolor="{{  hacking1  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;
+<td bgcolor="{{  color1  }}" width="119">&nbsp;
 </td>
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="13">
+<td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">20:00</p>
 </td>
-<td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
-</span></p></td>
-<td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Dinner</span></p>
+<td bgcolor="{{  hacking2  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="13">
+<td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">20:30</p>
 </td>
-<td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
-</span></p></td>
-<td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Dinner</span></p>
+<td bgcolor="{{  hacking2  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="118">
-<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
+<td bgcolor="{{ social }}" width="118">
+<p lang="en-US"><span lang="en-US">Late-night social</span></p>
 </td>
-<td bgcolor="{{  hacking1  }}" width="127">
+<td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">21:30</p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="118">
-<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
+<td bgcolor="{{ social }}" width="118">
+<p lang="en-US"><span lang="en-US">Late-night social</span></p>
 </td>
-<td bgcolor="{{  hacking1  }}" width="127">
+<td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
