--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -53,10 +53,8 @@ color: darkblue
 <p lang="en-US">9:30</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p></td>
+<td bgcolor="{{  hacking2 }}" width="127">&nbsp;</td>
+<td bgcolor="{{  hacking2 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -73,14 +71,12 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="24">
+<td bgcolor="{{  color1  }}" width="24" height="24">
 <p lang="en-US">10:30</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p></td>
+<td bgcolor="{{  color1  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  hacking1  }}" width="127">&nbsp;</td>
+<td bgcolor="{{  hacking1  }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -97,16 +93,12 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
+<td bgcolor="{{  color2  }}" width="24" height="24">
 <p lang="en-US">11:30</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking2  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  hacking2  }}" width="119">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
+<td bgcolor="{{  hacking2 }}" width="127">&nbsp;</td>
+<td bgcolor="{{  hacking2 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -127,12 +119,8 @@ color: darkblue
 <p lang="en-US">12:30</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Lunch</span></p>
-</td>
-<td bgcolor="{{ hacking1 }}" width="119">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
+<td bgcolor="{{ dinner }}" width="127">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -149,16 +137,12 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">13:30</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking1 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">Lunch</span></p>
-</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -179,12 +163,8 @@ color: darkblue
 <p lang="en-US">14:30</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{ presentation1 }}" width="119">
-<p lang="en-US"><span lang="en-US">Preparing final presentations</span></p>
-</td>
+<td bgcolor="{{ hacking2 }}" width="127">&nbsp;</td>
+<td bgcolor="{{ presentation1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -194,12 +174,7 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  lecture }}" width="127">
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em>
-</span></p>
-</span></p>
-</span></p></td>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em></span></p></td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
@@ -211,15 +186,10 @@ color: darkblue
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  lecture }}" width="127">
-<p lang="en-US"><span lang="en-US">Talks from:</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em>
-</span></p>
-</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em> </span></p>
 </span></p></td>
-<td bgcolor="{{  presentation2  }}" width="119">
-<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
+<td bgcolor="{{ presentation2 }}" width="119">&nbsp;
 </td>
 </tr>
 
@@ -241,12 +211,8 @@ color: darkblue
 <p lang="en-US">16:30</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Tea-time break</span></p>
-</td>
-<td bgcolor="{{  presentation1  }}" width="119">
-<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
-</td>
+<td bgcolor="{{ dinner }}" width="127">&nbsp;</td>
+<td bgcolor="{{ presentation1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
