--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -137,7 +137,7 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
+<td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">13:30</p>
 </td>
 <td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
@@ -231,18 +231,12 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="38">
+<td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">17:30</p>
 </td>
-<td bgcolor="{{  dinner }}" width="118">
-<p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
-</td>
-<td bgcolor="{{  hacking1  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking </span></p>
-</td>
-<td bgcolor="{{  dinner  }}" width="119">
-<p lang="en-US"><span lang="en-US">Googbye drinks</span></p>
-</td>
+<td bgcolor="{{ dinner }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hacking1 }}" width="127">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -261,18 +255,12 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="13">
+<td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">18:30</p>
 </td>
-<td bgcolor="{{  presentation1  }}" width="118">
-<p lang="en-US"><span lang="en-US">5-min blitz project opening presentations</span></p>
-</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">Goodbye drinks</span></p>
-</td>
+<td bgcolor="{{ presentation1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ hancking2 }}" width="127">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -281,8 +269,6 @@ color: darkblue
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
-</span></p></td>
 <td bgcolor="{{  dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
@@ -295,11 +281,9 @@ color: darkblue
 <p lang="en-US">19:30</p>
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
 </span></p></td>
-<td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Dinner</span></p>
+<td bgcolor="{{  dinner }}" width="127">&nbsp;
 </td>
 <td bgcolor="{{  color1  }}" width="119">&nbsp;
 </td>
