--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -49,15 +49,6 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="24">
-<p lang="en-US">9:30</p>
-</td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking2 }}" width="127">&nbsp;</td>
-<td bgcolor="{{  hacking2 }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">10:00</p>
 </td>
@@ -68,15 +59,6 @@ color: darkblue
 <td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-</tr>
-
-<tr>
-<td bgcolor="{{  color1  }}" width="24" height="24">
-<p lang="en-US">10:30</p>
-</td>
-<td bgcolor="{{  color1  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking1  }}" width="127">&nbsp;</td>
-<td bgcolor="{{  hacking1  }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -93,15 +75,6 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="24">
-<p lang="en-US">11:30</p>
-</td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  hacking2 }}" width="127">&nbsp;</td>
-<td bgcolor="{{  hacking2 }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">12:00</p>
 </td>
@@ -112,15 +85,6 @@ color: darkblue
 <td bgcolor="{{ hacking1 }}" width="119">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-</tr>
-
-<tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
-<p lang="en-US">12:30</p>
-</td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="127">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -137,15 +101,6 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color2 }}" width="24" height="5">
-<p lang="en-US">13:30</p>
-</td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">14:00</p>
 </td>
@@ -159,22 +114,16 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
-<p lang="en-US">14:30</p>
-</td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking2 }}" width="127">&nbsp;</td>
-<td bgcolor="{{ presentation1 }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">15:00</p>
 </td>
 <td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
 <td bgcolor="{{  lecture }}" width="127">
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em></span></p></td>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em></span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em> </span></p>
+</span></p></td></td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
@@ -204,15 +153,6 @@ color: darkblue
 <td bgcolor="{{  presentation1  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
-</tr>
-
-<tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
-<p lang="en-US">16:30</p>
-</td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="127">&nbsp;</td>
-<td bgcolor="{{ presentation1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -259,13 +199,22 @@ color: darkblue
 <p lang="en-US">18:30</p>
 </td>
 <td bgcolor="{{ presentation1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hancking2 }}" width="127">&nbsp;</td>
+<td bgcolor="{{ hacking2}}" width="127">&nbsp;</td>
 <td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="13">
+<td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">19:00</p>
+</td>
+<td bgcolor="{{ dinner }}" width="118">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="127">&nbsp;</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
+</tr>
+
+<tr>
+<td bgcolor="{{ color2 }}" width="24" height="13">
+<p lang="en-US">19:30</p>
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
@@ -277,33 +226,21 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="13">
-<p lang="en-US">19:30</p>
+<td bgcolor="{{  color1  }}" width="24" height="5">
+<p lang="en-US">20:00</p>
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
-</span></p></td>
-<td bgcolor="{{  dinner }}" width="127">&nbsp;
+</span></p>
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;
+<td bgcolor="{{  dinner  }}" width="127">
+<p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
-<p lang="en-US">20:00</p>
-</td>
-<td bgcolor="{{  hacking2  }}" width="118">
-<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
-</td>
-<td bgcolor="{{  hacking1  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
+<td bgcolor="{{  color1  }}" width="24" height="5">
 <p lang="en-US">20:30</p>
 </td>
 <td bgcolor="{{  hacking2  }}" width="118">
@@ -312,20 +249,20 @@ color: darkblue
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
+<td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="{{ social }}" width="118">
-<p lang="en-US"><span lang="en-US">Late-night social</span></p>
+<td bgcolor="{{ hacking2 }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
@@ -344,19 +281,6 @@ color: darkblue
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
-</td>
-<td bgcolor="{{ social }}" width="118">
-<p lang="en-US"><span lang="en-US">Late-night social</span></p>
-</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
-<p lang="en-US">22:30</p>
 </td>
 <td bgcolor="{{ social }}" width="118">
 <p lang="en-US"><span lang="en-US">Late-night social</span></p>
