--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -130,19 +130,6 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="5">
-<p lang="en-US">15:30</p>
-</td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
-<td bgcolor="{{  lecture }}" width="127">
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em> </span></p>
-</span></p></td>
-<td bgcolor="{{ presentation2 }}" width="119">&nbsp;
-</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">16:00</p>
 </td>
@@ -171,15 +158,6 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color2 }}" width="24" height="5">
-<p lang="en-US">17:30</p>
-</td>
-<td bgcolor="{{ dinner }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking1 }}" width="127">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">18:00</p>
 </td>
@@ -195,20 +173,11 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
-<p lang="en-US">18:30</p>
-</td>
-<td bgcolor="{{ presentation1 }}" width="118">&nbsp;</td>
-<td bgcolor="{{ hacking2}}" width="127">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">19:00</p>
 </td>
-<td bgcolor="{{ dinner }}" width="118">&nbsp;</td>
-<td bgcolor="{{ dinner }}" width="127">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="118"><p lang="en-US"><span lang="en-US"></span>Break for further drinks</p></td>
+<td bgcolor="{{ dinner }}" width="127"><p lang="en-US"><span lang="en-US">Dinner</span></p></td>
 <td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
 </tr>
 
@@ -218,10 +187,8 @@ color: darkblue
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-<td bgcolor="{{  dinner }}" width="127">
-<p lang="en-US"><span lang="en-US">Dinner</span></p>
-</td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;
+<td bgcolor="{{  dinner }}" width="127">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;
 </td>
 </tr>
 
@@ -233,8 +200,8 @@ color: darkblue
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
 </span></p>
 </td>
-<td bgcolor="{{  dinner  }}" width="127">
-<p lang="en-US"><span lang="en-US">Dinner</span></p>
+<td bgcolor="{{  hacking1  }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 </tr>
@@ -279,7 +246,7 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
+<td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">22:00</p>
 </td>
 <td bgcolor="{{ social }}" width="118">
@@ -288,11 +255,11 @@ color: darkblue
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{  color2  }}" width="24" height="4">
+<td bgcolor="{{  color1  }}" width="24" height="4">
 <p lang="en-US">23:00</p>
 </td>
 <td bgcolor="{{  social  }}" width="118">
@@ -301,7 +268,7 @@ color: darkblue
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 </tr>
 
 </tbody>
