--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -137,8 +137,7 @@ color: darkblue
 <td bgcolor="{{ dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Tea-time break</span></p>
 </td>
-<td bgcolor="{{  presentation1  }}" width="119">
-<p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
+<td bgcolor="{{  presentation2  }}" width="119">&nbsp;
 </td>
 </tr>
 
@@ -167,8 +166,7 @@ color: darkblue
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  dinner }}" width="119">
-<p lang="en-US"><span lang="en-US">Goodbye drinks</span></p>
+<td bgcolor="{{  dinner }}" width="119">&nbsp;
 </td>
 </tr>
 
@@ -213,8 +211,7 @@ color: darkblue
 <td bgcolor="{{  hacking2  }}" width="118">
 <p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
-<td bgcolor="{{  hacking1  }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+<td bgcolor="{{  hacking1  }}" width="127">&nbsp;
 </td>
 <td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
 </tr>
@@ -233,42 +230,39 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color1 }}" width="24" height="5">
+<td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">21:30</p>
 </td>
 <td bgcolor="{{ social }}" width="118">
 <p lang="en-US"><span lang="en-US">Late-night social</span></p>
 </td>
-<td bgcolor="{{ hacking2 }}" width="127">
+<td bgcolor="{{ hacking2 }}" width="127">&nbsp;
+</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
+</tr>
+
+<tr>
+<td bgcolor="{{ color1 }}" width="24" height="5">
+<p lang="en-US">22:00</p>
+</td>
+<td bgcolor="{{ social }}" width="118">&nbsp;
+</td>
+<td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
 </tr>
 
 <tr>
-<td bgcolor="{{ color2 }}" width="24" height="5">
-<p lang="en-US">22:00</p>
-</td>
-<td bgcolor="{{ social }}" width="118">
-<p lang="en-US"><span lang="en-US">Late-night social</span></p>
-</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
-</tr>
-
-<tr>
-<td bgcolor="{{  color1  }}" width="24" height="4">
+<td bgcolor="{{  color2  }}" width="24" height="4">
 <p lang="en-US">23:00</p>
 </td>
-<td bgcolor="{{  social  }}" width="118">
-<p lang="en-US"><span lang="en-US">Late-night social</span></p>
+<td bgcolor="{{  social  }}" width="118">&nbsp;
 </td>
-<td bgcolor="{{  hacking1  }}" width="127">
+<td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
 </tr>
 
 </tbody>
