--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -220,8 +220,7 @@ color: darkblue
 <td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">21:00</p>
 </td>
-<td bgcolor="{{ hacking2 }}" width="118">
-<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
+<td bgcolor="{{ hacking2 }}" width="118">&nbsp;
 </td>
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
