--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -23,6 +23,7 @@ color: darkblue
 
 <table width="421" cellspacing="0" cellpadding="4" bgcolor="#cadfff">
 <tbody>
+
 <tr>
 <td  bgcolor="{{ color1 }}"  width="24" height="12">&nbsp;</td>
 <td bgcolor="{{ color1 }}" width="118">
@@ -36,23 +37,25 @@ color: darkblue
 </td>
 </tr>
 
-
 <tr>
 <td bgcolor="{{  color2  }}" width="24" height="24">
 <p lang="en-US">9:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p></td>
+<td bgcolor="{{  hacking2  }}" width="119"><p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
 </tr>
 
 <tr>
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">10:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
@@ -65,7 +68,8 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">11:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
@@ -78,7 +82,8 @@ color: darkblue
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">12:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{ dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Lunch</span></p>
 </td>
@@ -91,7 +96,8 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">13:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{  hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
@@ -104,7 +110,8 @@ color: darkblue
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">14:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
@@ -117,13 +124,15 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">15:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{  lecture }}" width="127">
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em></span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em> </span></p>
-</span></p></td></td>
+</span></p>
+</td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
 </td>
@@ -133,7 +142,8 @@ color: darkblue
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">16:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="118">&nbsp;
+</td>
 <td bgcolor="{{ dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Tea-time break</span></p>
 </td>
@@ -174,9 +184,12 @@ color: darkblue
 <td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">19:00</p>
 </td>
-<td bgcolor="{{ dinner }}" width="118"><p lang="en-US"><span lang="en-US"></span>Break for further drinks</p></td>
-<td bgcolor="{{ dinner }}" width="127"><p lang="en-US"><span lang="en-US">Dinner</span></p></td>
-<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
+<td bgcolor="{{ dinner }}" width="118"><p lang="en-US"><span lang="en-US"></span>Break for further drinks</p>
+</td>
+<td bgcolor="{{ dinner }}" width="127"><p lang="en-US"><span lang="en-US">Dinner</span></p>
+</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -185,7 +198,9 @@ color: darkblue
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
 <p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-<td bgcolor="{{  dinner }}" width="127">&nbsp;</td>
+</td>
+<td bgcolor="{{  dinner }}" width="127">&nbsp;
+</td>
 <td bgcolor="{{  color2  }}" width="119">&nbsp;
 </td>
 </tr>
@@ -201,7 +216,8 @@ color: darkblue
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -213,7 +229,8 @@ color: darkblue
 </td>
 <td bgcolor="{{  hacking1  }}" width="127">&nbsp;
 </td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color1  }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -225,7 +242,8 @@ color: darkblue
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -237,7 +255,8 @@ color: darkblue
 </td>
 <td bgcolor="{{ hacking2 }}" width="127">&nbsp;
 </td>
-<td bgcolor="{{ color2 }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color2 }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -249,7 +268,8 @@ color: darkblue
 <td bgcolor="{{ hacking1 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{ color1 }}" width="119">&nbsp;</td>
+<td bgcolor="{{ color1 }}" width="119">&nbsp;
+</td>
 </tr>
 
 <tr>
@@ -261,7 +281,8 @@ color: darkblue
 <td bgcolor="{{  hacking2  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;</td>
+<td bgcolor="{{  color2  }}" width="119">&nbsp;
+</td>
 </tr>
 
 </tbody>
