--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -8,9 +8,11 @@ color: white
 
 ---
 
-## **Participant Registration is now OPEN**.
+## **Participant Registration is now CLOSE**.
 
+<!--
 ### Registration form is available [here](https://docs.google.com/forms/d/e/1FAIpQLSddlhiyNjpdJ6s_qCEPAhR0_K2jW06Q4lktpAHW_SXzROIAXw/viewform)
+-->
 
 Registration will take place in three rounds and there will be small registration fee (to cover the catering during the event) for the project participants:
 * **EARLY** -> *21.01* - *03.02* -> 100 PLN / 25 EUR
