no more mistakes

--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -162,7 +162,7 @@ color: darkblue
 <p lang="en-US"><span lang="en-US">Brain hacking </span></p>
 </td>
 <td bgcolor="{{  dinner  }}" width="119">
-<p lang="en-US"><span lang="en-US">Googbye drinks</span></p>
+<p lang="en-US"><span lang="en-US">Goodbye drinks</span></p>
 </td>
 </tr>
 
