--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -8,7 +8,7 @@ color: white
 
 ---
 
-## **Participant Registration is now CLOSE**.
+## **Participant Registration is now CLOSED**.
 
 <!--
 ### Registration form is available [here](https://docs.google.com/forms/d/e/1FAIpQLSddlhiyNjpdJ6s_qCEPAhR0_K2jW06Q4lktpAHW_SXzROIAXw/viewform)
