Adding new color

--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -1,18 +1,14 @@
 ---
 title: About
-<<<<<<< HEAD
-bg: main_yellow
-=======
-bg: darkblue
->>>>>>> Changing main website parts
-color: lightblue
+bg: emerald
+color: darkblue
 ---
 
 # About Brainhack Warsaw 2020
 
 
 
-On the last weekend of **March 2019**, the third edition of **Brainhack Warsaw** will take place. During this three-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
+On the last weekend of **March 2020**, the third edition of **Brainhack Warsaw** will take place. During this three-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
 
 The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining, machine learning and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees of various backgrounds are welcome to join!
 
