--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -27,13 +27,13 @@ color: darkblue
 <tr>
 <td  bgcolor="{{ color1 }}"  width="24" height="12">&nbsp;</td>
 <td bgcolor="{{ color1 }}" width="118">
-<p lang="en-US"><span lang="en-US"><strong>Friday, 1st March 2019</strong></span></p>
+<p lang="en-US"><span lang="en-US"><strong>Friday, 27th March 2020</strong></span></p>
 </td>
 <td bgcolor="{{ color1 }}" width="127">
-<p lang="en-US"><span lang="en-US"><strong>Saturday, 2nd March 2019</strong></span></p>
+<p lang="en-US"><span lang="en-US"><strong>Saturday, 28th March 2020</strong></span></p>
 </td>
 <td bgcolor="{{ color1 }}" width="119">
-<p lang="en-US"><span lang="en-US"><strong>Sunday, 3rd March 2019</strong></span></p>
+<p lang="en-US"><span lang="en-US"><strong>Sunday, 29th March 2020</strong></span></p>
 </td>
 </tr>
 
@@ -124,7 +124,8 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="24" height="5">
 <p lang="en-US">15:00</p>
 </td>
-<td bgcolor="{{  color2  }}" width="118">&nbsp;
+<td bgcolor="{{  dinner }}" width="118">
+<p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
 </td>
 <td bgcolor="{{  lecture }}" width="127">
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
@@ -142,7 +143,8 @@ color: darkblue
 <td bgcolor="{{ color1 }}" width="24" height="5">
 <p lang="en-US">16:00</p>
 </td>
-<td bgcolor="{{ color1 }}" width="118">&nbsp;
+<td bgcolor="{{  presentation1  }}" width="118">
+<p lang="en-US"><span lang="en-US">5-min blitz project opening presentations</span></p>
 </td>
 <td bgcolor="{{ dinner }}" width="127">
 <p lang="en-US"><span lang="en-US">Tea-time break</span></p>
@@ -155,8 +157,7 @@ color: darkblue
 <td bgcolor="{{  color2  }}" width="24" height="38">
 <p lang="en-US">17:00</p>
 </td>
-<td bgcolor="{{  dinner }}" width="118">
-<p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
+<td bgcolor="{{ dinner }}" width="118"><p lang="en-US"><span lang="en-US"></span>Break for further drinks</p>
 </td>
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking </span></p>
@@ -167,14 +168,42 @@ color: darkblue
 </tr>
 
 <tr>
+<td bgcolor="{{  color2  }}" width="24" height="38">
+<p lang="en-US">17:30</p>
+</td>
+<td bgcolor="{{  lecture  }}" width="118">
+<p lang="en-US"><span lang="en-US">Ignite talk: TBA</span></p>
+</td>
+<td bgcolor="{{  hacking1  }}" width="127">
+</td>
+<td bgcolor="{{  dinner  }}" width="119">
+</td>
+</tr>
+
+<tr>
 <td bgcolor="{{ color1 }}" width="24" height="13">
 <p lang="en-US">18:00</p>
 </td>
-<td bgcolor="{{  presentation1  }}" width="118">
-<p lang="en-US"><span lang="en-US">5-min blitz project opening presentations</span></p>
+<td bgcolor="{{  lecture  }}" width="118">
+<p lang="en-US"><span lang="en-US"><em><a href="">TBA</a></em>
+</span></p>
 </td>
 <td bgcolor="{{ hacking2 }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
+</td>
+<td bgcolor="{{  dinner }}" width="119">&nbsp;
+</td>
+</tr>
+
+<tr>
+<td bgcolor="{{ color1 }}" width="24" height="13">
+<p lang="en-US">18:30</p>
+</td>
+<td bgcolor="{{  hacking2  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
+</td>
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"></p>
 </td>
 <td bgcolor="{{  dinner }}" width="119">&nbsp;
 </td>
