--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -129,10 +129,7 @@ color: darkblue
 </td>
 <td bgcolor="{{  lecture }}" width="127">
 <p lang="en-US"><span lang="en-US">Talks from:</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#nat">Natalia Bielczyk</a></em></span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#katja">Katja Heuer</a></em>
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#geek">Agata Piekut</a></em> </span></p>
-</span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="">TBA</a></em> </span></p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
@@ -213,7 +210,7 @@ color: darkblue
 <td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">19:00</p>
 </td>
-<td bgcolor="{{ dinner }}" width="118"><p lang="en-US"><span lang="en-US"></span>Break for further drinks</p>
+<td bgcolor="{{  hacking1  }}" width="118">
 </td>
 <td bgcolor="{{ dinner }}" width="127"><p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
@@ -222,25 +219,10 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{ color2 }}" width="24" height="13">
-<p lang="en-US">19:30</p>
-</td>
-<td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US">Ignite talk: Roberto Toro</span></p>
-</td>
-<td bgcolor="{{  dinner }}" width="127">&nbsp;
-</td>
-<td bgcolor="{{  color2  }}" width="119">&nbsp;
-</td>
-</tr>
-
-<tr>
 <td bgcolor="{{  color1  }}" width="24" height="5">
 <p lang="en-US">20:00</p>
 </td>
-<td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#toro">Towards a collaborative neuroscience</a></em>
-</span></p>
+<td bgcolor="{{  hacking2  }}" width="118">
 </td>
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
@@ -250,39 +232,14 @@ color: darkblue
 </tr>
 
 <tr>
-<td bgcolor="{{  color1  }}" width="24" height="5">
-<p lang="en-US">20:30</p>
-</td>
-<td bgcolor="{{  hacking2  }}" width="118">
-<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
-</td>
-<td bgcolor="{{  hacking1  }}" width="127">&nbsp;
-</td>
-<td bgcolor="{{  color1  }}" width="119">&nbsp;
-</td>
-</tr>
-
-<tr>
 <td bgcolor="{{ color2 }}" width="24" height="5">
 <p lang="en-US">21:00</p>
-</td>
-<td bgcolor="{{ hacking2 }}" width="118">&nbsp;
-</td>
-<td bgcolor="{{ hacking2 }}" width="127">
-<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
-</td>
-<td bgcolor="{{ color2 }}" width="119">&nbsp;
-</td>
-</tr>
-
-<tr>
-<td bgcolor="{{ color2 }}" width="24" height="5">
-<p lang="en-US">21:30</p>
 </td>
 <td bgcolor="{{ social }}" width="118">
 <p lang="en-US"><span lang="en-US">Late-night social</span></p>
 </td>
-<td bgcolor="{{ hacking2 }}" width="127">&nbsp;
+<td bgcolor="{{ hacking2 }}" width="127">
+<p lang="en-US"><span lang="en-US">Brain hacking</span></p>
 </td>
 <td bgcolor="{{ color2 }}" width="119">&nbsp;
 </td>
