--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -211,6 +211,7 @@ color: darkblue
 <p lang="en-US">19:00</p>
 </td>
 <td bgcolor="{{  hacking1  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
 <td bgcolor="{{ dinner }}" width="127"><p lang="en-US"><span lang="en-US">Dinner</span></p>
 </td>
@@ -223,6 +224,7 @@ color: darkblue
 <p lang="en-US">20:00</p>
 </td>
 <td bgcolor="{{  hacking2  }}" width="118">
+<p lang="en-US"><span lang="en-US">Brainstorming</span></p>
 </td>
 <td bgcolor="{{  hacking1  }}" width="127">
 <p lang="en-US"><span lang="en-US">Brain hacking</span></p>
