--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -13,6 +13,8 @@ color: white
 
 <div id="profile-container">
 
+{% include profile-card.html avatarurl="joanna.jpg" profilename="Joanna Frankiewicz, Eng" affiliation="Data Scientist, <br>
+Faculty of Biomedical Engineering and Faculty of Automatic Control, Electronics and Computer Science", <br>Silesian University of Technology, <br>Gliwice, Poland%}
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Neuroinformatics, <br>Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
