--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -18,6 +18,9 @@ Faculty of Biomedical Engineering and Faculty of Automatic Control, Electronics 
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Neuroinformatics, <br>Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
+{% include profile-card.html avatarurl="women.jpg" profilename="Pamela Krzypkowska" affiliation="Lorem Ipsum" %}
+
+{% include profile-card.html avatarurl="men.jpg" profilename="Mateusz Rychlicki" affiliation="Lorem Ipsum" %}
 
 </div>
 
