Changing comitee information

--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -18,9 +18,11 @@ Faculty of Biomedical Engineering and Faculty of Automatic Control, Electronics 
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Neuroinformatics, <br>Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
-{% include profile-card.html avatarurl="women.jpg" profilename="Pamela Krzypkowska" affiliation="Lorem Ipsum" %}
+{% include profile-card.html avatarurl="pam.jpg" profilename="Pamela Krzypkowska" affiliation="Computer Science, Philosophy, <br>
+Faculty of Mathematics and Information Sciences, Warsaw University of Technology, <br> Faculty of Philosophy, University of Warsaw <br>Warsaw, Poland"%}
 
-{% include profile-card.html avatarurl="men.jpg" profilename="Mateusz Rychlicki" affiliation="Lorem Ipsum" %}
+{% include profile-card.html avatarurl="rych.jpg" profilename="Mateusz Rychlicki" affiliation="Computer Science, <br>
+Faculty of Mathematics, Informatics and Mechanics <br> University of Warsaw <br> Warsaw, Poland"%}
 
 </div>
 
