--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -6,24 +6,30 @@ color: darkblue
 
 # Past Editions
 
-This is the third time that Brainhack Warsaw is happening. We are proud that out initiative has gone so far and happy o share with you what have happened before. You can read about all the projects conducted before, engage with our previous guests and also get a glimpse of what you might be expecting this year. 
+This is the third time that Brainhack Warsaw is happening. We are proud that out initiative has gone so far and happy o share with you what have happened before. You can read about all the projects conducted before, engage with our previous guests and also get a glipse of what you might be expecting this year. 
 
 If you want to take a look at first and second edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017, and [**here**](https://brainhackwarsaw2019.github.io/) read everything about Brainhack Warsaw 2019. Read how it used to be and be prepared for this year!
 
 
-<div id="bh2017" class="img-with-text">
+<div class="row">
+  <div class="column">
     <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
-    <img src="img/brain_ico.png" width="50%" height="50%" alt="bh2017">
+    <img src="img/brain_ico.png" align="left" alt="bh2017">
     </a>
-    <p>2017</p>
+  </div>
+  <div class="column">
+    <a href="https://brainhackwarsaw2019.github.io" target="_blank">
+    <img  src="img/brain_ico.png" align="right" width="50%" height="50%" alt="bh2019">
+    </a>
+  </div>
 </div>
 
-<div id="bh2019" class="img-with-text">
-    <a href="https://brainhackwarsaw2019.github.io/" target="_blank">
-    <img src="img/brain_ico.png" width="50%" height="50%" alt="bh2019">
-    </a>
-    <p>2019</p>
+<div class="row">
+  <div class="column">
+    <p> 2017 </p>
+  </div>
+  <div class="column">
+    <p> 2019 </p>
+  </div>
 </div>
-
-
 
