--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -13,6 +13,10 @@ If you want to take a look at first and second edition: [**here**](https://brain
 
 <div id="profile-container">
     <div>
+        <p> Click on our brain and find out! </p>
+    </div>
+    
+    <div>
         <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
         <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
         </a>
