--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -23,14 +23,14 @@ We believe that the drive for exploration, curiosity and reaching out is what ma
     </div> 
     <div>
         <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
-        <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
+        <img src="img/brain_ico.png" width="40%" height="40%" align="center" alt="Brainhack 2017">
         </a>
-        <h3 style="font-family:verdana;">2017</h3>
+        <h5 style="font-family:verdana;">2017</h5>
     </div>
     <div>
         <a href="https://brainhackwarsaw2019.github.io" target="_blank">
-        <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
+        <img  src="img/brain_ico.png" align="center" width="40%" height="40%" alt="Brainhack 2019">
         </a>
-        <h3 style="font-family:verdana;">2019</h3>
+        <h5 style="font-family:verdana;">2019</h5>
     </div>
 </div>
