Adding past editions panel

--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -12,12 +12,18 @@ If you want to take a look at first and second edition: [**here**](https://brain
 
 
 <div id="profile-container">
-    <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
-    <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
-    </a>
+    <div>
+        <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
+        <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
+        </a>
+        <p> 2017 </p>
+    </div>
     
-    <a href="https://brainhackwarsaw2019.github.io" target="_blank">
-    <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
-    </a>
+    <div>
+        <a href="https://brainhackwarsaw2019.github.io" target="_blank">
+        <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
+        </a>
+        <p> 2019 </p>
+    </div>
 </div>
 
