--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -22,6 +22,12 @@ We believe that the drive for exploration, curiosity and reaching out is what ma
     <div>
         <p>‎‎‎‎‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎</p>
     </div> 
+        <div>
+        <p>‎‎‎‎‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎</p>
+    </div> 
+        <div>
+        <p>‎‎‎‎‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎‎ ‎</p>
+    </div> 
     <div>
         <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
         <img src="img/brain_ico.png" width="40%" height="40%" align="center" alt="Brainhack 2017">
