Adding past editions panel

--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -11,16 +11,13 @@ This is the third time that Brainhack Warsaw is happening. We are proud that out
 If you want to take a look at first and second edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017, and [**here**](https://brainhackwarsaw2019.github.io/) read everything about Brainhack Warsaw 2019. Read how it used to be and be prepared for this year!
 
 
-<div class="row">
-  <div class="column">
+<div id="profile-container">
     <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
     <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
     </a>
-  </div>
-  <div class="column">
+    
     <a href="https://brainhackwarsaw2019.github.io" target="_blank">
     <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
     </a>
-  </div>
 </div>
 
