Adding past editions panel

--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -8,7 +8,7 @@ color: white
 
 ---
 
-## **Participant Registration is now CLOSED**.
+## **Participant Registration opens SOON**.
 
 <!--
 ### Registration form is available [here](https://docs.google.com/forms/d/e/1FAIpQLSddlhiyNjpdJ6s_qCEPAhR0_K2jW06Q4lktpAHW_SXzROIAXw/viewform)
@@ -21,8 +21,10 @@ Registration will take place in three rounds and there will be small registratio
 
 **PLEASE NOTE:** the first round is paid after qualifying, second and third immediately
 
+
 If you have any questions or queries about fees, please write to us: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
+<!--
 ### Payment details
    * **Bank account:** 
    * **IBAN**:
@@ -33,7 +35,7 @@ For your convenience we prepared a list of nice and friendly hotels where you ge
 
 
 
-<!--
+
 Please send the project proposals before 1st September  2017 to the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 -->
 <!--
